crates/guicons-core/tests/snapshots/load__cyclic_include_is_reported_and_does_not_hang.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_errors(dir.path(), &errors)"
---
[
    ErrorSummary {
        file: "a.gui.toml",
        span: None,
        message: "recursive icon manifest include",
    },
]
