crates/guicons-core/tests/snapshots/load__entries_are_sorted_by_key_across_includes.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_entries(dir.path(), manifest.entries())"
---
[
    EntrySummary {
        key: "alpha",
        family: "alpha",
        variant: None,
        dynamic: false,
        source: File(
            "a.svg",
        ),
    },
    EntrySummary {
        key: "middle",
        family: "middle",
        variant: None,
        dynamic: false,
        source: File(
            "icons/middle.svg",
        ),
    },
    EntrySummary {
        key: "zebra",
        family: "zebra",
        variant: None,
        dynamic: false,
        source: File(
            "z.svg",
        ),
    },
]
