crates/guicons-core/tests/snapshots/load__include_merges_child_manifest_entries.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_entries(dir.path(), manifest.entries())"
---
[
    EntrySummary {
        key: "back",
        family: "back",
        variant: None,
        dynamic: false,
        source: File(
            "icons/back.svg",
        ),
    },
    EntrySummary {
        key: "logo",
        family: "logo",
        variant: None,
        dynamic: false,
        source: File(
            "logo.svg",
        ),
    },
]
