crates/guicons-core/tests/snapshots/load__include_section_must_be_a_table.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_errors(dir.path(), &errors)"
---
[
    ErrorSummary {
        file: "icons.gui.toml",
        span: Some(
            (
                20,
                24,
            ),
        ),
        message: "`[include]` must be a table",
    },
]
