crates/guicons-core/tests/snapshots/load__include_target_must_be_a_string.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_errors(dir.path(), &errors)"
---
[
    ErrorSummary {
        file: "icons.gui.toml",
        span: Some(
            (
                33,
                34,
            ),
        ),
        message: "`include.nav` must be a string",
    },
]
