crates/guicons-core/tests/snapshots/load__link_includes_entries_must_be_strings.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_errors(dir.path(), &errors)"
---
[
    ErrorSummary {
        file: "icons.gui.toml",
        span: Some(
            (
                36,
                37,
            ),
        ),
        message: "`link.includes` entries must be strings",
    },
]
