crates/guicons-core/tests/snapshots/load__link_includes_must_be_an_array.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_errors(dir.path(), &errors)"
---
[
    ErrorSummary {
        file: "icons.gui.toml",
        span: Some(
            (
                36,
                40,
            ),
        ),
        message: "expected an array, found string",
    },
]
