crates/guicons-core/tests/snapshots/load__link_rejects_unknown_fields.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_errors(dir.path(), &errors)"
---
[
    ErrorSummary {
        file: "icons.gui.toml",
        span: Some(
            (
                9,
                104,
            ),
        ),
        message: "unexpected field(s): `includes1` (expected one of: `includes`)",
    },
]
