crates/guicons-core/tests/snapshots/load__link_section_must_be_a_table.snap
---
source: crates/guicons-core/tests/load.rs
expression: "summarize_errors(dir.path(), &errors)"
---
[
    ErrorSummary {
        file: "icons.gui.toml",
        span: Some(
            (
                17,
                21,
            ),
        ),
        message: "`[link]` must be a table",
    },
]
